--- a/build.xml
+++ b/build.xml
@@ -72,6 +72,7 @@
 		<!-- Compile the java code from ${src} into ${build} -->
 		<javac srcdir="${src}" destdir="${build}" debug="${compile.debug}" source="${compile.source}" target="${compile.target}" nowarn="on" deprecation="${compile.deprecation}" optimize="${compile.optimize}">
 			<classpath refid="compile.classpath" />
+			<compilerarg line="-encoding iso-8859-1" />
 		</javac>
 
 	</target>
